connect with saru website phase 1 commit-6 price change 99 to 149

--- a/src/Mails/PaymentSuccessMail.html
+++ b/src/Mails/PaymentSuccessMail.html
@@ -84,6 +84,7 @@
         <p>Your 1 to 1 session is now <strong>confirmed</strong>.</p>
         <p>The session invite with details will be scheduled and shared with you shortly.</p>
         <p>Looking forward to connecting with you!</p>
+        <p><strong>Note: Your comfort comes first, turning on video is not required.</strong></p>
       </div>
 
       <!-- Footer -->
